--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <!-- <base href="/"> -->
-  <base href="aquariumwebsite/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -38,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2154006904';
+    var serviceWorkerVersion = '1336067861';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
